# schoolshits-etl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
schoolshits_etl/: __main__.py  main.py
